# Duotronics

./: Duotronic Math - Rough Draft.html  Duotronic Math - Rough Draft.odt  Duotronics - Chapter 1-17.html  Duotronics - Chapter 1-17.odt  Duotronics - Chapter 18.html  Duotronics - Chapter 18.odt  Duotronics - Chapter 19.html  Duotronics - Chapter 19.odt  Duotronics - Chapter 20-21.html  Duotronics - Chapter 20-21.odt  Duotronics - Chapter 22.html  Duotronics - Chapter 22.odt  Duotronics - Chapter 23.html  Duotronics - Chapter 23.odt  Duotronics - ai prep instructions.html  Duotronics_Concept_Source_Paper.md  LICENSE  README.md  ROADMAP.md
harness/runtime/: pyproject.toml
harness/runtime/runtime_ref/: __init__.py  api.py  state.py
harness/runtime/runtime_ref/architecture/: __init__.py  manager.py  review.py  state_migration.py
harness/runtime/runtime_ref/learning/: __init__.py  engine.py
harness/runtime/runtime_ref/meta/: __init__.py  acceptance.py  diagnostics.py  estimator.py  replay.py  rho_kernel.py  (+1 more)
harness/runtime/tests/: test_learning_engine_api.py  test_meta_acceptance.py  test_meta_memory_cell_api.py  test_meta_objects.py  test_policy_architecture_api.py  test_rho_kernel_api.py
prototypes/wgrnn/: README.md  __init__.py  pyproject.toml  requirements.txt
prototypes/wgrnn/duotronic_wgrnn/: __init__.py  cell.py  memory.py  policy.py  records.py  replay.py  runner.py  sample_data.py  time_utils.py  witness.py
prototypes/wgrnn/tests/: test_authority.py  test_memory_updates.py  test_policy_clamps.py  test_quarantine.py  test_replay_identity.py  test_sample_loop.py
(+231 files in other folders)
