[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-meta-runtime"
version = "0.1.0"
description = "Standalone SRNN-style meta runtime reference package for the harness"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
runtime_ref = ["meta_objects/ontology.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
